--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/now">Now</a></li>
-                    <li><a href="/cv">CV</a></li>
+                    <li><a href="/cv">Resume</a></li>
                     <li><a href="/blog">Blog</a></li>
                     <li><a href="/projects">Projects</a></li>
                 </ul>
